<resources>
    <string name="user_format_liuchat_id">浏信号：%s</string>
    <string name="user_format_address">地区：%s</string>
    <string name="user_format_liuchat_money_count">浏信币（个)</string>
    <string name="user_ic_pay">充值</string>
    <string name="user_ic_order">订单</string>
    <string name="user_ic_clique">生活圈</string>
    <string name="user_ic_collect">收藏</string>
    <string name="user_ic_setting">设置</string>
    <string name="user_my_clique">我的生活圈</string>
    <string name="user_search">搜索</string>
    <string name="user_not_dynaimc">暂无动态</string>
    <string name="user_reply">回复</string>
    <string name="user_not_endorse">没人给我点赞</string>
    <string name="user_endorse_for_you">赞了你的动态</string>
    <string name="user_format_gift_for_you">给你送了%s</string>
    <string name="user_my_collect">我的收藏</string>
    <string name="user_collect_goods">收藏的商品</string>
    <string name="user_certification_hint1">上传本人身份证照片</string>
    <string name="user_certification_hint2">为了安全，平台要求实名认证，请及时上传信息以不影响后续您的功能体验。</string>
    <string name="user_upload_identity_card_front">上传身份证正面</string>
    <string name="user_upload_identity_card_rear">上传身份证反面</string>
    <string name="user_submit">提交</string>
    <string name="user_realname_certification">实名认证</string>
    <string name="user_please_upload_card_front">请上传身份证正面照</string>
    <string name="user_please_upload_card_rear">请上传身份证反面照</string>
    <string name="user_upload_fail">上传失败</string>
    <string name="user_submit_fail">提交失败</string>
    <string name="user_submit_success">提交成功</string>
    <string name="user_submiting">提交中...</string>
    <string name="user_get_verification_code">获取验证码</string>
    <string name="user_input_verification_code">请输入验证码</string>
    <string name="user_input_phone">请输入手机号</string>
    <string name="user_input_psw_1">请输入6-16位新密码</string>
    <string name="user_input_psw_2">确认新密码</string>
    <string name="user_confirm_submit">确认提交</string>
    <string name="user_send_code_success">发送验证码成功</string>
    <string name="user_set_psw">请设置密码</string>
    <string name="user_psw_min_6">密码必须大于6位</string>
    <string name="user_psw_max_16">密码必须小于16位</string>
    <string name="user_psw_not_equals">两次密码不一致</string>
    <string name="user_verification_code_error">验证码不正确</string>
    <string name="user_set_psw_success">修改密码成功</string>
    <string name="user_psw_login">密码登录</string>
    <string name="user_input_recommend_people">推荐人手机号（选填）</string>
    <string name="user_login_register_agree">登录注册即代表同意</string>
    <string name="user_user_protocol">《用户协议》</string>
    <string name="user_privacy_policy">《隐私政策》</string>
    <string name="user_agree_login">同意协议并登录</string>
    <string name="user_nickname">昵称</string>
    <string name="user_modification">修改</string>
    <string name="user_receiving_address">收货地址管理</string>
    <string name="user_register_date">注册时间</string>
    <string name="user_user_safe">账户安全</string>
    <string name="user_phone_alipay">手机号、支付宝</string>
    <string name="user_message_notify">消息通知</string>
    <string name="user_logout">退出登录</string>
    <string name="user_setting">设置</string>
    <string name="user_input_nickname">输入新昵称</string>
    <string name="user_confirm_modify">确认修改</string>
    <string name="user_input_new_nickname">请设置新的昵称</string>
    <string name="user_modify_success">修改成功</string>
    <string name="user_hint">提示</string>
    <string name="user_confirm_logout">确认退出登录吗？</string>
    <string name="user_confirm">确认</string>
    <string name="user_cancel">取消</string>
    <string name="user_logout_fail">退出登录失败</string>
    <string name="user_ic_album">我的相册</string>
    <string name="user_my_order">我的订单</string>
    <string name="user_apply_store">申请店铺</string>
    <string name="user_my_album">我的相册</string>
    <string name="user_earnings_title">收益(元)</string>
    <string name="user_tag_ten_thousand">万</string>
    <string name="user_earnings_detail">收益明细</string>
    <string name="user_bill_detail">账单明细</string>
    <string name="user_my_business_card">我的名片</string>
    <string name="user_identity_authentication">身份认证</string>
    <string name="user_not_identity_authentication">未认证</string>
    <string name="user_add_modify_avatar">点击修改头像</string>
    <string name="user_avatar">头像</string>
    <string name="user_liuxin_username">浏信号</string>
    <string name="user_my_qrcode">我的二维码</string>
    <string name="user_sex">性别</string>
    <string name="user_region">地区</string>
    <string name="user_personalized_signature">个性签名</string>
    <string name="user_birthday">生日</string>
    <string name="user_enducation">学历</string>
    <string name="user_occupation">职业</string>
    <string name="user_my_information">我的资料</string>
    <string name="user_man">男</string>
    <string name="user_women">女</string>
    <string name="user_save">保存</string>
    <string name="user_scan_add_friend">扫一扫 添加朋友</string>
    <string name="user_qrcode_yet_save">已保存到本地</string>
    <string name="user_input_job">请输入职位</string>
    <string name="user_input_new_job">和旧职位一样</string>
    <string name="user_intro">个性签名</string>
    <string name="user_input_intro">请输入个性签名</string>
    <string name="user_input_new_intro">请设置新的个性签名</string>
    <string name="user_idcard_name">身份证姓名：</string>
    <string name="user_idcard_number">身份证号码：</string>
    <string name="user_yet_certification">已认证</string>

</resources>
