<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <module.common.view.ActionBarView
        android:id="@+id/actionBarView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/pswLoginTV"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        style="@style/tv_14_313131"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingRight="@dimen/dp_12"
        android:paddingLeft="@dimen/dp_12"
        android:clickable="true"
        android:text="@string/user_psw_login"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/phoneTagTV"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        style="@style/tv_14_313131"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/dp_12"
        android:gravity="center"
        android:text="+86"
        android:paddingRight="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@id/actionBarView"
        android:layout_marginTop="@dimen/dp_8"
        />

    <View
        android:id="@+id/lineV"
        android:layout_width="@dimen/dp_1"
        android:layout_height="@dimen/dp_24"
        android:background="@color/cl_f0eff4"
        app:layout_constraintLeft_toRightOf="@id/phoneTagTV"
        app:layout_constraintTop_toTopOf="@id/phoneTagTV"
        app:layout_constraintBottom_toBottomOf="@id/phoneTagTV"
        />

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="@dimen/dp_60"
        app:layout_constraintLeft_toRightOf="@id/lineV"
        android:paddingLeft="@dimen/dp_12"
        app:layout_constraintTop_toTopOf="@id/phoneTagTV"
        app:layout_constraintBottom_toBottomOf="@id/phoneTagTV"
        android:inputType="phone"
        android:maxLength="11"
        android:background="@null"
        style="@style/tv_14_313131"
        android:textColorHint="@color/cl_707070"
        android:hint="@string/user_input_phone"
        />

    <ImageView
        android:id="@+id/clearPhoneIV"
        android:layout_width="@dimen/dp_30"
        android:layout_height="@dimen/dp_30"
        android:src="@drawable/ic_clear"
        app:layout_constraintRight_toRightOf="@id/phoneET"
        app:layout_constraintTop_toTopOf="@id/phoneET"
        app:layout_constraintBottom_toBottomOf="@id/phoneET"
        android:clickable="true"
        android:layout_marginRight="@dimen/dp_20"
        android:visibility="gone"
        />

    <View
        android:id="@+id/line1V"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneTagTV"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/cl_f0eff4"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        />



    <EditText
        android:id="@+id/codeET"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/getCodeTV"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@id/line1V"
        android:background="@null"
        android:layout_marginTop="@dimen/dp_8"
        android:inputType="number"
        android:lines="1"
        android:maxLength="6"
        style="@style/tv_14_313131"
        android:textColorHint="@color/cl_707070"
        android:hint="@string/user_input_verification_code"
        />

    <TextView
        android:id="@+id/getCodeTV"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingRight="@dimen/dp_12"
        android:paddingLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:textColor="@color/cl_13b5b1"
        android:textSize="@dimen/sp_14"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/user_get_verification_code"
        app:layout_constraintTop_toTopOf="@id/codeET"
        app:layout_constraintBottom_toBottomOf="@id/codeET"
        />

    <View
        android:id="@+id/line3V"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeET"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/cl_f0eff4"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        />

    <EditText
        android:id="@+id/recommendPeopleET"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingLeft="@dimen/dp_12"
        android:paddingRight="@dimen/dp_50"
        app:layout_constraintTop_toBottomOf="@id/line3V"
        android:background="@null"
        android:layout_marginTop="@dimen/dp_8"
        android:inputType="number"
        android:lines="1"
        android:maxLength="11"
        style="@style/tv_14_313131"
        android:textColorHint="@color/cl_707070"
        android:hint="@string/user_input_recommend_people"
        />

    <View
        android:id="@+id/line4V"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommendPeopleET"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/cl_f0eff4"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        />

    <TextView
        android:id="@+id/protocolLeftTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/cl_707070"
        android:layout_marginLeft="@dimen/dp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line4V"
        android:text="@string/user_login_register_agree"
        android:layout_marginTop="@dimen/dp_50"
        />

    <TextView
        android:id="@+id/userProtocolTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/protocolLeftTV"
        app:layout_constraintLeft_toRightOf="@id/protocolLeftTV"
        android:textColor="@color/cl_13b5b1"
        android:textSize="@dimen/sp_12"
        android:text="@string/user_user_protocol"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        />

    <TextView
        android:id="@+id/privacyPolicyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/protocolLeftTV"
        app:layout_constraintLeft_toRightOf="@id/userProtocolTV"
        android:textColor="@color/cl_13b5b1"
        android:textSize="@dimen/sp_12"
        android:text="@string/user_privacy_policy"
        android:clickable="true"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        />

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_48"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userProtocolTV"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/cl_ffffff"
        android:gravity="center"
        android:text="@string/user_agree_login"
        android:background="@drawable/user_bg_confirm"
        />

</androidx.constraintlayout.widget.ConstraintLayout>