<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/userbgIV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/user_bg_my_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,7:3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatarIV"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_40"
        android:src="@drawable/ic_default_avatar"
        app:layout_constraintLeft_toLeftOf="@id/userbgIV"
        app:layout_constraintTop_toTopOf="@id/userbgIV" />

    <TextView
        android:id="@+id/nickNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_8"
        android:drawablePadding="@dimen/dp_4"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:textColor="@color/cl_ffffff"
        android:textSize="@dimen/sp_18"
        app:layout_constraintLeft_toRightOf="@id/avatarIV"
        app:layout_constraintTop_toTopOf="@id/avatarIV" />

    <ImageView
        android:id="@+id/sexIV"
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_14"
        android:layout_marginLeft="@dimen/dp_4"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@id/nickNameTV"
        app:layout_constraintLeft_toRightOf="@id/nickNameTV"
        app:layout_constraintTop_toTopOf="@id/nickNameTV" />


    <TextView
        android:id="@+id/liuchatIdTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/user_format_liuchat_id"
        android:textColor="@color/cl_ffffff"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="@id/avatarIV"
        app:layout_constraintLeft_toLeftOf="@id/nickNameTV"
        app:layout_constraintRight_toLeftOf="@id/addressTV" />

    <TextView
        android:id="@+id/addressTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/user_format_address"
        android:textColor="@color/cl_ffffff"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBaseline_toBaselineOf="@id/liuchatIdTV"
        app:layout_constraintLeft_toRightOf="@id/liuchatIdTV"
        app:layout_constraintRight_toRightOf="@id/userbgIV" />

    <ImageView
        android:id="@+id/shareIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_4"
        android:padding="@dimen/dp_8"
        android:src="@drawable/user_ic_share"
        app:layout_constraintRight_toRightOf="@id/userbgIV"
        app:layout_constraintTop_toTopOf="@id/avatarIV" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lxMoneyCountCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="@id/userbgIV"
        app:layout_constraintLeft_toLeftOf="@id/avatarIV"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintRight_toLeftOf="@id/earningsCL">

        <TextView
            android:id="@+id/lxMoneyCountTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_format_liuchat_money_count"
            android:textColor="@color/cl_ffffff"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/lxMoneyCountTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_6"
            android:textColor="@color/cl_ffffff"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:lines="1"
            android:ellipsize="end"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/lxMoneyCountTitleTV"
            app:layout_constraintLeft_toRightOf="@id/lxMoneyCountTitleTV"
            app:layout_constraintTop_toTopOf="@id/lxMoneyCountTitleTV" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/earningsCL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_20"
        app:layout_constraintBottom_toBottomOf="@id/userbgIV"
        app:layout_constraintLeft_toRightOf="@id/lxMoneyCountCL"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintRight_toRightOf="@id/userbgIV">

        <TextView
            android:id="@+id/earningsTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_earnings_title"
            android:textColor="@color/cl_ffffff"
            android:textSize="@dimen/sp_12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/earningsTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_6"
            android:ellipsize="end"
            android:textColor="@color/cl_ffffff"
            android:textSize="@dimen/sp_14"
            android:textStyle="bold"
            android:lines="1"
            app:layout_constraintBottom_toBottomOf="@id/earningsTitleTV"
            app:layout_constraintLeft_toRightOf="@id/earningsTitleTV"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/earningsTitleTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>